# mcode

./: alphabets.csv  clean.py  complete.py  setup.cfg  setup.py
mcode/: __init__.py  _complete.py  unicode_clean1.pkl
notebook/: Untitled.ipynb
