[metadata]
author = D. Horta
author_email = danilo.horta@pm.me
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Mathematical unicode completion
download_url = https://github.com/horta/mcode
keywords = math, unicode, latex
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = danilo.horta@pm.me
name = mcode
url = https://github.com/horta/mcode
version = attr: version.get

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=4.2
install_requires =
    pytest>=3.8.2
    setuptools>=40.2.0
    fuzzyfinder>=2.1.0
    prompt_toolkit>=2.0.9
tests_requires =
    pytest>=3.8.2

[aliases]
test = pytest

[tool:pytest]
addopts =
    -x
    -s
    --doctest-plus
    --doctest-rst
    --doctest-modules
    --doctest-glob="*.rst"
    --text-file-format="rst"
    --ignore="setup.py"
    --ignore="doc/conf.py"
norecursedirs = .eggs .git *.egg-info build .ropeproject doc/_build .undodir doc/_generated
pep8ignore = R0915

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88

[flake8]
ignore = E501 E741 E203 W503
exclude = doc/_build

[pylint]
disable = R0915

[rstcheck]
ignore_substitutions = today, version
ignore_directives = plot, autofunction, command-output, autmodule, automodule, autoclass, autoattribute, automethod, doctest
ignore_messages = Error in "math" directive
